Update pages, add infoSharing
Update pages, add Info Sharing page

--- a/content/about.qmd
+++ b/content/about.qmd
@@ -3,16 +3,12 @@ title: "About Us"
 page-layout: full
 ---
 
-PAM-equipped gliders provide an autonomous solution to collecting vocal species encounter datasets that can serve NMFS assessment needs. Several studies have proven the utility of such data for examining habitat association and density estimates, though generally at a limited spatial scale. The right hardware deployed at sufficient temporal and geographic scale will provide acoustic detection and ecosystem data to inform qualitative and quantitative assessments. Such data can immediately be used to examine species occurrence and distribution in remote regions that are rarely or never surveyed using vessel-based methods. With dedicated R&D effort, PAM-equipped gliders can augment and replace some ship-based survey efforts, informing climate assessments, including changes in range or space use, and quantitative metrics, including density.
+NOAA Fisheries will lead a 3 year effort to accelerate a transition to operations for using PAM-based glider surveys to augment existing surveys. These efforts are based on previous successful research efforts using PAM-equipped gliders off the U.S. East Coast to study right whales, and recent testing of SeaGliders off Hawaii. Slocum gliders are being used for real-time monitoring of North Atlantic right whales off the U.S. Atlantic coast through a [NEFSC/WHOI collaboration](https://www.whoi.edu/news-insights/content/teaming-up-for-right-whales){target="\_blank"}. NOAA's OMAO UxS Operation Center partnered with PIFSC to test PAM-equipped SeaGliders to augment ship-based surveys across the vast Pacific Islands region. The results from these studies highlighed that PAM-equipped gliders can augment and replace some ship-based survey efforts, informing climate assessments, including changes in range or space use, and quantitative metrics, including density.
 
-PAM-equipped Slocum gliders for real-time monitoring of North Atlantic right whales and other baleen whales off the Atlantic coast of the U.S. were developed through a NEFSC/WHOI collaboration over the last decade and now form part of an operational NMFS program. Those efforts currently focus primarily on monitoring low frequency cetacean species, though could be expanded to play a larger role in assessment surveys of other higher frequency cetacean species with some advancement to their acoustic data acquisition software. In partnership with the OMAO UxS Operation Center (UxSOC), PIFSC recently began testing PAM-equipped Seagliders to augment ship-based surveys across the vast Pacific Islands region. Initial surveys around the main Hawaiian Islands have provided important data on glider and high-frequency acoustic system endurance, acoustic encounter rates relative to other survey modalities, and the ability of the glider to maintain a predetermined trackline, an important consideration for systematic surveys in regions with strong currents and eddies that can force the glider off track.
+To expand on these efforts, PIFSC and SWFSC will lead a 3 year effort to accelerate the transition to operations for PAM-based glider surveys. The work will be focused in the Pacific initially because these Centers are ready to act and they are collectively responsible for the largest area under NMFS jurisdiction, have acute shortages of adequate shiptime, and must find alternative survey modalities to maintain their assessment operations. Despite the regional focus, the goal will be to develop a Research to Operations plan that can be adapted or applied in other regions seeking to implement PAM-equipped glider surveys to support their marine mammal assessments. The effort includes:
 
-Leveraging this PAM SI and the knowledge base of operational NARW glider surveys, the UxS SI, PIFSC and SWFSC will lead a 3 year effort to accelerate the transition to operations for PAM-based glider surveys. The work will be focused in the Pacific for the duration of this IRA-funded SI because these Centers are ready to act and they are collectively responsible for the largest area under NMFS jurisdiction, have acute shortages of adequate shiptime, and must find alternative survey modalities to maintain their assessment operations. Despite the regional focus, the goal will be to develop an R2O plan that can be adapted or applied in other regions seeking to implement PAM-equipped glider surveys to support their marine mammal assessments. The effort includes:
+-   **In-water instrumentation testing of several PAM-glider systems** with the goal of examining hardware and sensor choices and how these choices may vary based on regional differences in assessment needs and oceanographic realities. For more information, see the ***Glider Rodeo***.
 
--   **In-water instrumentation testing of several PAM-glider systems** with the goal of examining hardware and sensor choices (including WHOI DMONs) and how these choices may vary based on regional differences in assessment needs and oceanographic realities. (supported by the UxS Plankton to Whales Project and PAM SI)
+-   **Concurrent glider and shipboard surveys.** We will deploy several PAM-equipped gliders in association with two large-scale assessment surveys- PacMAPPS west coast in 2024 and PacMAPPS Hawaii in 2025. These surveys provide an opportunity to collect glider datasets that can be compared alongside traditional cetacean survey data to guide future survey design and analytical advancements. These surveys happen infrequently, such that this is a time-sensitive opportunity to begin validation of glider-based work. For more information, see the section on ***Shipboard Surveys***.
 
--   **Concurrent glider and shipboard surveys.** We will deploy several PAM-equipped gliders in association with two large-scale assessment surveys- PacMAPPS west coast in 2024 and PacMAPPS Hawaii in 2025. These surveys provide an opportunity to collect glider datasets that can be compared alongside traditional cetacean survey data to guide future survey design and analytical advancements. These surveys happen infrequently, such that this is a time-sensitive opportunity to begin validation of glider-based work. (supported by the UxS SI PacMAPPS project)
-
--   **Build capacity to sustain glider operations.** PIFSC and SWFSC will increase capacity to sustain PAM-glider operations through support for glider technicians at each Center and for pilot and technician training (supported jointly by PAM SI Plankton to Whales/PacMAPPS projects and UxS SI). PAM-equipped glider services are typically not available as fee-for-service operations and partner CIs that have been supporting PIFSC R&D work to-date are not equipped to support NMFS operational use of PAM-equipped gliders. The Pacific-wide R2O plan will include considerations of operational costs for conducting PAM-glider surveys into the future.
-
-This work is partly guided by the Transition Plan developed by PIFSC as part of its UxSOC- funded work and leverages the significant advancements by NEFSC and WHOI in development of PAM-equipped Slocum gliders.
+-   **Build capacity to sustain glider operations.** PIFSC and SWFSC will increase capacity to sustain PAM-glider operations through support for glider technicians at each Center and for pilot and technician training. The Pacific-wide R2O plan will include considerations of operational costs for conducting PAM-glider surveys into the future.
