--- a/content/about.qmd
+++ b/content/about.qmd
@@ -3,14 +3,14 @@ title: "About Us"
 page-layout: full
 ---
 
-NOAA Fisheries will lead a 3 year effort to accelerate a transition to operations for using PAM-based glider surveys to augment existing surveys. These efforts are based on previous successful research efforts using PAM-equipped gliders off the U.S. East Coast to study right whales, and recent testing of Seagliders off Hawaii. Slocum gliders are being used for real-time monitoring of North Atlantic right whales off the U.S. Atlantic coast through a [NEFSC/WHOI collaboration](https://www.whoi.edu/news-insights/content/teaming-up-for-right-whales){target="\_blank"}. NOAA's OMAO UxS Operation Center partnered with PIFSC to test PAM-equipped Seagliders to augment ship-based surveys across the vast Pacific Islands region. The results from these studies highlighted that PAM-equipped gliders can augment and replace some ship-based survey efforts, informing climate assessments, including changes in range or space use, and quantitative metrics, including density.
+NOAA Fisheries will lead a 3 year effort to accelerate a transition to operations for using PAM-based glider surveys to augment existing surveys. These efforts are based on previous successful research efforts using PAM-equipped gliders off the U.S. East Coast to study right whales, and recent testing of Seagliders off Hawaiʻi. Slocum gliders are being used for real-time monitoring of North Atlantic right whales off the U.S. Atlantic coast through a [NEFSC/WHOI collaboration](https://www.whoi.edu/news-insights/content/teaming-up-for-right-whales){target="_blank"}. NOAA's OMAO UxS Operation Center partnered with PIFSC to test PAM-equipped Seagliders to augment ship-based surveys across the vast Pacific Islands region. The results from these studies highlighted that PAM-equipped gliders can augment and replace some ship-based survey efforts, informing climate assessments, including changes in range or space use, and quantitative metrics, including density.
 
 To expand on these efforts, PIFSC and SWFSC will lead a 3 year effort to accelerate the transition to operations for PAM-based glider surveys. The work will be focused in the Pacific initially because these Centers are ready to act and they are collectively responsible for the largest area under NMFS jurisdiction, have acute shortages of adequate shiptime, and must find alternative survey modalities to maintain their assessment operations. Despite the regional focus, the goal will be to develop a Research to Operations plan that can be adapted or applied in other regions seeking to implement PAM-equipped glider surveys to support their marine mammal assessments. The effort includes:
 
--   **Build capacity to sustain glider operations.** PIFSC and SWFSC will increase capacity to sustain PAM-glider operations through support for glider technicians at each Center and for pilot and technician training. The Pacific-wide R2O plan will include considerations of operational costs for conducting PAM-glider surveys into the future. See ***[Gliders](https://nmfs-pam-glider.github.io/PAM-UxS/content/gliders.html)*** and ***[Sensors](https://nmfs-pam-glider.github.io/PAM-UxS/content/sensors.html)*** to learn more about available (and developing) hardware options.
+-   **Build capacity to sustain glider operations.** PIFSC and SWFSC will increase capacity to sustain PAM-glider operations through support for glider technicians at each Center and for pilot and technician training. The Pacific-wide R2O plan will include considerations of operational costs for conducting PAM-glider surveys into the future. See [***Gliders***](https://nmfs-pam-glider.github.io/PAM-UxS/content/gliders.html) and [***Sensors***](https://nmfs-pam-glider.github.io/PAM-UxS/content/sensors.html) to learn more about available (and developing) hardware options.
 
--   **In-water instrumentation testing of several PAM-glider systems** with the goal of examining hardware and sensor choices and how these choices may vary based on regional differences in assessment needs and oceanographic realities. For more information, see the ***[Field Testing](https://nmfs-pam-glider.github.io/PAM-UxS/content/gliderRodeo.html)***.
+-   **In-water instrumentation testing of several PAM-glider systems** with the goal of examining hardware and sensor choices and how these choices may vary based on regional differences in assessment needs and oceanographic realities. For more information, see the [***Field Testing***](https://nmfs-pam-glider.github.io/PAM-UxS/content/gliderRodeo.html).
 
--   **Concurrent glider and shipboard surveys.** We will deploy several PAM-equipped gliders in association with two large-scale assessment surveys- PacMAPPS west coast in 2024 and PacMAPPS Hawaii in 2025. These surveys provide an opportunity to collect glider datasets that can be compared alongside traditional cetacean survey data to guide future survey design and analytical advancements. These surveys happen infrequently, such that this is a time-sensitive opportunity to begin validation of glider-based work. For more information, see the section on ***[Ship & Glider Surveys](https://nmfs-pam-glider.github.io/PAM-UxS/content/shipSurveys.html)***.
+-   **Concurrent glider and shipboard surveys.** We will deploy several PAM-equipped gliders in association with two large-scale assessment surveys- PacMAPPS west coast in 2024 and PacMAPPS Hawaiʻi in 2025. These surveys provide an opportunity to collect glider datasets that can be compared alongside traditional cetacean survey data to guide future survey design and analytical advancements. These surveys happen infrequently, such that this is a time-sensitive opportunity to begin validation of glider-based work. For more information, see the section on [***Ship & Glider Surveys***](https://nmfs-pam-glider.github.io/PAM-UxS/content/shipSurveys.html).
 
-- **Develop Spatial Modeling Methods.** We will initiate development of statistical models to accommodate marine mammal acoustic detection data from PAM Gliders, facilitating adoption of these methods to address our stock assessment needs. See [***Spatial Modeling***](https://nmfs-pam-glider.github.io/PAM-UxS/content/modeling.html) for more information.
+-   **Develop Spatial Modeling Methods.** We will initiate development of statistical models to accommodate marine mammal acoustic detection data from PAM Gliders, facilitating adoption of these methods to address our stock assessment needs. See [***Spatial Modeling***](https://nmfs-pam-glider.github.io/PAM-UxS/content/modeling.html) for more information.
