captilization of Seaglider, okina in Hawaiʻi

--- a/content/gliders.qmd
+++ b/content/gliders.qmd
@@ -10,9 +10,9 @@ The primary contemporary gliders with PAM capacity include Slocum, Seagliders, O
 
 NOAA's Southwest Fisheries Science Center began deploying Slocum gliders to study Antarctic krill in 2018, and in 2025 they will expand their glider program with PAM-equipped gliders to study marine mammals off the U.S. West coast. Slocum Gliders are modular, and two different PAM systems will be tested: the [DMON](https://apps.dtic.mil/sti/tr/pdf/ADA617025.pdf){target="_blank"} (developed by WHOI) and [WISPR](https://embeddedocean.com/passive-acoustics-2/){target="_blank"} (Embedded Ocean Systems).
 
-## SeaGliders (U Washington) ![](images/seaGlider.jpg){width="114"}
+## Seagliders (U Washington) ![](images/Seaglider.jpg){width="114"}
 
-[Seagliders](https://iop.apl.washington.edu/seaglider.php){target="_blank"}  are buoyancy driven autonomous underwater vehicles developed at the University of Washington. Through a partnership with Dave Mellinger at Oregon State University, NOAA researchers at Pacific Islands Fisheries Science Center has been testing the passive acoustic capabilities of these gliders to conduct marine mammal monitoring off Hawaii. They will continue this collaboration in 2025 as PIFSC builds out their own glider lab with SeaGliders with onboard [WISPR](https://embeddedocean.com/passive-acoustics-2/){target="_blank"}  acoustic processors. Seaglider support resources can be found [here](https://iop.apl.washington.edu/iopsg/){target="_blank"} , and WISPR 2.0 specifications can be found [here](https://embeddedocean.com/wispr-v2-0/){target="_blank"} . *Note that WISPR 3.0 is under development.*
+[Seagliders](https://iop.apl.washington.edu/seaglider.php){target="_blank"}  are buoyancy driven autonomous underwater vehicles developed at the University of Washington. Through a partnership with Dave Mellinger at Oregon State University, NOAA researchers at Pacific Islands Fisheries Science Center has been testing the passive acoustic capabilities of these gliders to conduct marine mammal monitoring off Hawaiʻi. They will continue this collaboration in 2025 as PIFSC builds out their own glider lab with Seagliders with onboard [WISPR](https://embeddedocean.com/passive-acoustics-2/){target="_blank"}  acoustic processors. Seaglider support resources can be found [here](https://iop.apl.washington.edu/iopsg/){target="_blank"} , and WISPR 2.0 specifications can be found [here](https://embeddedocean.com/wispr-v2-0/){target="_blank"} . *Note that WISPR 3.0 is under development.*
 
 ## Ocean Scout (Hefring) ![](images/HefringGlider.jpg){width="149"}
 
