--- a/content/infoSharing.qmd
+++ b/content/infoSharing.qmd
@@ -16,7 +16,7 @@ Stack Exchange is a network of question and answer websites on topics in diverse
 
 
 ### Zotero Group Library
-Zotero is a free, open-source reference management tool that helps users collect, organize, cite, and share research resources. A Zotero Group Library is a shared library that allows users to collaboration on research projects by sharing and managing references. We have developed the following Zotero Group Libraries to allow users to identify and share related references. To join and contribute references, first create a Zotero account and request to be a member. These libraries are by no means complete, and our intent is to build a collaborative resource for the broader community of researchers, students, and practicioners.
+Zotero is a free, open-source reference management tool that helps users collect, organize, cite, and share research resources. A Zotero Group Library is a shared library that allows users to collaboration on research projects by sharing and managing references. We have developed the following Zotero Group Libraries to allow users to identify and share related references. To join and contribute references, first create a Zotero account and request to be a member. These libraries are by no means complete, and our intent is to build a collaborative resource for the broader community of researchers, students, and practitioners.
 
 [**PAM-Glider Group Library**](https://www.zotero.org/groups/5642642/pam-gliders){target="_blank"}
 
