--- a/content/gliderRodeo.qmd
+++ b/content/gliderRodeo.qmd
@@ -10,7 +10,7 @@ In-water instrumentation testing of several PAM-glider systems with the goal of 
 
 The Ecosystem Science Division (ESD) at the Southwest Fisheries Science Center (SWFSC) deployed glider “unit_1024” on February 24, 2025 off San Diego, CA (@fig-fieldTest_pathMap_SlocumWispr_feb2025). This glider was deployed in conjunction with Teledyne Webb Research from the vessel R/V *Benthic Cat*. The main objective of this deployment was to test two new sensors: a photosynthetically active radiation (PAR) sensor (Biospherical Instruments) and a passive acoustic monitor (“WISPR”, Embedded Ocean Systems). The glider was programmed to fly approximately 70 km north between 9-Mile Bank and Del Mar Steeples toward Oceanside Harbor. However, 36 hours after deployment, the glider mission aborted its mission for a leak in the aft section. An emergency recovery was initiated for February 26 aboard the R/V *Outer Limits*. Prior to the leak, the glider traveled a total of 29.74 km wile performing 29 dives to a maximum depth of 600 m.
 
-Details regarding this sea trial, including pre- and post-trial testing can be found \[here\](<https://github.com/nmfs-ost/PAM-Glider/tree/main/supplemental>/2025 February unit_1024 Emergency Recovery and Post-Deployment Report.pdf).
+Details regarding this sea trial, including pre- and post-trial testing can be found \[here\](<https://github.com/nmfs-ost/PAM-Glider/blob/main/supplemental/2025%20February%20unit_1024%20Emergency%20Recovery%20and%20Post-Deployment%20Report.pdf).
 
 ![Path of “unit_1024.” unit_1024 was deployed 22 km west of Mission Bay, San Diego, CA on February 24, 2025. The glider flew a path west from the initial deployment location and was headed north toward Oceanside, CA, when it aborted its mission for a leak in the aft section. The glider drifted southwest overnight and was recovered on February 26, 2025 by the F/V Outer Limits. Yellow dots indicate where the glider surfaced throughout its deployment, red dots indicate points where the glider aborted its mission, and the bullseye represents the glider’s next waypoint.](images/fieldTest_pathMap_SlocumWispr_feb2025.PNG){#fig-fieldTest_pathMap_SlocumWispr_feb2025 width="331"}
 
