Fixed SPACIOUS link, removed redundant page
Now that there is the PAM-Stocks site, linked to that instead

--- a/content/about.qmd
+++ b/content/about.qmd
@@ -13,4 +13,4 @@ To expand on these efforts, PIFSC and SWFSC will lead a 3 year effort to acceler
 
 -   **Concurrent glider and shipboard surveys.** We will deploy several PAM-equipped gliders in association with two large-scale assessment surveys- PacMAPPS west coast in 2024 and PacMAPPS Hawaiʻi in 2025. These surveys provide an opportunity to collect glider datasets that can be compared alongside traditional cetacean survey data to guide future survey design and analytical advancements. These surveys happen infrequently, such that this is a time-sensitive opportunity to begin validation of glider-based work. For more information, see the section on [***Ship & Glider Surveys***](https://nmfs-pam-glider.github.io/PAM-UxS/content/shipSurveys.html).
 
--   **Develop Spatial Modeling Methods.** We will initiate development of statistical models to accommodate marine mammal acoustic detection data from PAM Gliders, facilitating adoption of these methods to address our stock assessment needs. See [***Spatial Modeling***](https://nmfs-pam-glider.github.io/PAM-UxS/content/modeling.html) for more information.
+-   **Develop Spatial Modeling Methods.** We will initiate development of statistical models to accommodate marine mammal acoustic detection data from PAM Gliders, facilitating adoption of these methods to address our stock assessment needs. See [***PAM-Stocks - Mobile recorders***](https://nmfs-ost.github.io/PAM-Stocks/content/gliderStocks.html) for more information.
